# leaguepp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.rtf  README.md  corefunctions.js  ilconfig.json  installer_linker.js  package-lock.json  package.json  test.json  tsconfig.json  vcconfig.json  view_compiler.js
resources/: resources.installer.rc
shared/: callbackholder.hpp
src/: callbackholder.hpp  debugutils.hpp  eventbus.hpp  hash.hpp  main.cpp  utils.hpp
src/browser/: browser.cpp  browser.hpp  core.cpp  eventbus.hpp  webview.hpp
src/chatproxy/: Cargo.toml
src/chatproxy/src/: lib.rs
src/client/: clientinterfacer.hpp  main.cpp
src/client/endpointmappers/: champselectsession.hpp  datachampion.hpp  dataresource.hpp  helper.hpp  lolchatme.hpp
src/client/features/: autopicker.cpp  autopicker.hpp  feature.hpp  lobbycontrolls.cpp  lobbycontrolls.hpp  profile.cpp  profile.hpp
src/client/features/endpointmappers/: lobbylobby.hpp  summaryplayerdata.hpp
src/client/interface/: holder.hpp
src/client/managers/: configmanager.cpp  configmanager.hpp  connectormanager.cpp  connectormanager.hpp  featuremanager.cpp  featuremanager.hpp  proxymanager.cpp  proxymanager.hpp  resourcemanager.cpp  resourcemanager.hpp
src/client/proxy/: chatproxy.cpp  chatproxy.hpp  configproxy.cpp  configproxy.hpp
src/core/: CMakeLists.txt
src/core/include/: endpoint_mappers.hpp  utils.hpp
src/core/include/features/: champion_select_controller.hpp  lobby_controller.hpp  profile_controller.hpp
src/core/include/managers/: config_manager.hpp  console_manager.hpp  feature_manager.hpp  league_connector_manager.hpp  log_manager.hpp  manager.hpp  resource_manager.hpp  window_manager.hpp
src/core/resources/: resources.gui.rc
src/core/src/: main.cpp
src/core/src/features/: champion_select_controller.cpp  lobby_controller.cpp  profile_controller.cpp
src/core/src/managers/: config_manager.cpp  console_manager.cpp  league_connector_manager.cpp  resource_manager.cpp  window_manager.cpp
src/features/: autoAccept.cpp  autoaccept.cpp  autoaccept.hpp  autopicker.cpp  autopicker.hpp  feature.hpp  lobbycontrolls.cpp  lobbycontrolls.hpp  profile.cpp  profile.hpp  stats.cpp  stats.hpp
src/features/endpointmappers/: helper.hpp
src/gui/: CMakeLists.txt
src/gui/src/: main.cpp
src/installer/: CMakeLists.txt
src/installer/src/: main.cpp
src/interface/: holder.hpp
src/managers/: browsermanager.cpp  browsermanager.hpp  configmanager.cpp  configmanager.hpp  connectormanager.cpp  connectormanager.hpp  eventmanager.cpp  eventmanager.hpp  featuremanager.cpp  featuremanager.hpp  layoutmanager.cpp  layoutmanager.hpp
src/service/: CMakeLists.txt
src/service/include/: service.hpp
src/service/src/: main.cpp  server.hpp
src/shared/: bitfield.hpp  callback.hpp  callbackholder.hpp  hash.hpp  utils.hpp  win32.hpp
src/shared/include/shared/: bitfield.hpp  general.hpp  random.hpp  singleton.hpp  win32.hpp
src/ui/: button.cpp  button.hpp  checkbox.cpp  checkbox.hpp  component.hpp  dropdown.cpp  dropdown.hpp  frame.cpp  frame.hpp  input.cpp  input.hpp  label.cpp  label.hpp  selector.cpp  selector.hpp  slider.cpp  slider.hpp
src/uiframework/: CMakeLists.txt  framework.cpp  framework_impl.hpp
src/uiframework/browser/: core.cpp  typehelpers.hpp  webview.hpp
src/uiframework/include/: button.hpp  checkbox.hpp  component.hpp  dropdown.hpp  frame.hpp  framework.hpp  input.hpp  label.hpp  list.hpp  selector.hpp  slider.hpp  tab.hpp  uiframework.hpp
src/uiframework/include/components/: button.hpp  checkbox.hpp  folder_selector.hpp  frame.hpp  image.hpp  label.hpp
src/uiframework/src/: browser.cpp  browser.hpp  helpers.hpp  systemwindow.cpp  systemwindow.hpp  uiframework.cpp  window.cpp  window.hpp
src/uiframework/src/components/: button.hpp  checkbox.hpp  folder_selector.hpp  frame.hpp  image.hpp  label.hpp
src/uiframework/ui/: button.cpp  button.hpp  checkbox.cpp  checkbox.hpp  dropdown.cpp  dropdown.hpp  frame.cpp  frame.hpp  input.cpp  input.hpp  label.cpp  label.hpp  list.cpp  list.hpp  selector.cpp  selector.hpp  slider.cpp  slider.hpp  tab.cpp  tab.hpp
src/uninstaller/: CMakeLists.txt
src/uninstaller/src/: main.cpp
src/window/: window.cpp  window.hpp
uiframework/browser/: core.cpp
uiframework/include/: button.hpp  checkbox.hpp  component.hpp  dropdown.hpp  frame.hpp  framework.hpp  input.hpp  label.hpp  selector.hpp  slider.hpp
uiframework/ui/: button.cpp  checkbox.cpp  checkbox.hpp  dropdown.cpp  frame.hpp  input.cpp  slider.cpp  slider.hpp
view/: index.css  index.html  index.ts  types.d.ts
